tests/paczka1/small_fuzzy/51370047.err
Error in line 9: ToGCP4vY A185 93,4
Error in line 11: A557 A49 75,b
Error in line 3: A557 A388 1,0
